[package]
name = "test_prob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
w1_therm_reader = "0.1.0"
influxdb2 = "*"
influxdb2-structmap = "0.2"
num-traits = "0.2"
futures = "*"
tokio = { version = "1.20.0", features = [ "full" ]}
confy = "0.5.1"
serde = "1.0.152"
serde_derive = "1.0.152"
