[package]
name = "salon_prob"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
w1_therm_reader = "0.1.0"
influxdb2 = "0.5.2"
influxdb2-structmap = "0.2"
influxdb2-derive = "0.1.1"
num-traits = "0.2.19"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
confy = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.40"
openssl = { version = "0.10", features = ["vendored"] }